adds documentation to openapi.yaml
